--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongodb": "^7.0.0",
     "mongoose": "^8.20.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
