--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "nodemon src/index.ts",
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Tests will be added by Person B\" && exit 0"
+    "test": "jest --runInBand"
   },
   "repository": {
     "type": "git",
@@ -18,17 +18,22 @@
   },
   "homepage": "https://github.com/komikronsgit/parkometer_backend#readme",
   "dependencies": {
-    "express": "^5.1.0",
-    "mongoose": "^8.20.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "body-parser": "^2.2.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.20.0"
   },
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.1.10",
-    "@types/node": "^24.10.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
-    "@types/cors": "^2.8.19"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
