--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
         "resolveJsonModule": true,
         "esModuleInterop": true,
         "strict": true
-    }
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "tests/**/*"]
 }
